fix overflow team name

--- a/frontend/src/app/viewer/teams-viewer.component.scss
+++ b/frontend/src/app/viewer/teams-viewer.component.scss
@@ -42,7 +42,7 @@
 
 .team-name {
   width: 120px;
-  // height: 50px;
+  height: 30px;
   // flex-grow: 1;
   text-align: center;
   padding-top: 6px;
